ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInFunctionParameterTypeES6/input.ts.stderr
error[1005]: Expected a binding pattern
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInFunctionParameterTypeES6/input.ts:2:12
  |
2 | function f(`hello`);
  |            ^^^^^^^

